--- a/jakc_queue_client/kiosk_screen.html
+++ b/jakc_queue_client/kiosk_screen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Blank Page</title>
+    <title>QueueLTE | Kiosk Screen</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
@@ -17,6 +17,7 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="static/src/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="static/src/css/queue.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -58,179 +59,6 @@
                 </div>
             </form>
             <!-- /.search form -->
-            <!-- sidebar menu: : style can be found in sidebar.less -->
-            <ul class="sidebar-menu" data-widget="tree">
-                <li class="header">MAIN NAVIGATION</li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                        <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-files-o"></i>
-                        <span>Layout Options</span>
-                        <span class="pull-right-container">
-              <span class="label label-primary pull-right">4</span>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                        <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                        <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                        <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="../widgets.html">
-                        <i class="fa fa-th"></i> <span>Widgets</span>
-                        <span class="pull-right-container">
-              <small class="label pull-right bg-green">Hot</small>
-            </span>
-                    </a>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-pie-chart"></i>
-                        <span>Charts</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                        <li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                        <li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                        <li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-laptop"></i>
-                        <span>UI Elements</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../UI/general.html"><i class="fa fa-circle-o"></i> General</a></li>
-                        <li><a href="../UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-                        <li><a href="../UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                        <li><a href="../UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                        <li><a href="../UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
-                        <li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-edit"></i> <span>Forms</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                        <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                        <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-table"></i> <span>Tables</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                        <li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="../calendar.html">
-                        <i class="fa fa-calendar"></i> <span>Calendar</span>
-                        <span class="pull-right-container">
-              <small class="label pull-right bg-red">3</small>
-              <small class="label pull-right bg-blue">17</small>
-            </span>
-                    </a>
-                </li>
-                <li>
-                    <a href="../mailbox/mailbox.html">
-                        <i class="fa fa-envelope"></i> <span>Mailbox</span>
-                        <span class="pull-right-container">
-              <small class="label pull-right bg-yellow">12</small>
-              <small class="label pull-right bg-green">16</small>
-              <small class="label pull-right bg-red">5</small>
-            </span>
-                    </a>
-                </li>
-                <li class="treeview active">
-                    <a href="#">
-                        <i class="fa fa-folder"></i> <span>Examples</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-                        <li><a href="profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
-                        <li><a href="login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-                        <li><a href="register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-                        <li><a href="lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-                        <li><a href="404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-                        <li><a href="500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-                        <li class="active"><a href="blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-                        <li><a href="pace.html"><i class="fa fa-circle-o"></i> Pace Page</a></li>
-                    </ul>
-                </li>
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-share"></i> <span>Multilevel</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                        <li class="treeview">
-                            <a href="#"><i class="fa fa-circle-o"></i> Level One
-                                <span class="pull-right-container">
-                  <i class="fa fa-angle-left pull-right"></i>
-                </span>
-                            </a>
-                            <ul class="treeview-menu">
-                                <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
-                                <li class="treeview">
-                                    <a href="#"><i class="fa fa-circle-o"></i> Level Two
-                                        <span class="pull-right-container">
-                      <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                                    </a>
-                                    <ul class="treeview-menu">
-                                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
-                    </ul>
-                </li>
-                <li><a href="https://adminlte.io/docs"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
-                <li class="header">LABELS</li>
-                <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
-                <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-                <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
-            </ul>
         </section>
         <!-- /.sidebar -->
     </aside>
@@ -246,30 +74,42 @@
             <div class="row">
                 <div class="col-md-6 col-xs-12" id="counter-grid">
                     <!-- Counter Grid -->
+                    <button type="button" code="0001" class="btn3d btn btn-danger btn-lg btn-block"
+                            style="font-size:58px;">
+                        <span class="info-box-icon"><i class="fa fa-users"></i></span>Customer Service
+                    </button>
+                    <button type="button" code="0002" class="btn3d btn btn-danger btn-lg btn-block"
+                            style="font-size:58px;">
+                        <span class="info-box-icon"><i class="fa fa-users"></i></span>Not Available
+                    </button>
+                    <button type="button" code="0003" class="btn3d btn btn-danger btn-lg btn-block"
+                            style="font-size:58px;">
+                        <span class="info-box-icon"><i class="fa fa-users"></i></span>Not Available
+                    </button>
+                    <button type="button" code="0004" class="btn3d btn btn-danger btn-lg btn-block"
+                            style="font-size:58px;">
+                        <span class="info-box-icon"><i class="fa fa-users"></i></span>Not Available
+                    </button>
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="box box-widget widget-user">
                         <!-- Add the bg color to the header using any of the bg-* classes -->
-                        <div class="widget-user-header bg-green-active">
+                        <div class="widget-user-header bg-red">
                             <h3 class="widget-user-username">Teller</h3>
                             <h5 class="widget-user-desc">Founder &amp; CEO</h5>
                         </div>
                         <div class="widget-user-image">
-                            <img class="img-circle" src="static/src/img/no-image.jpg">
+                            <img class="img-circle" src="static/src/img/telkom-logo.jpg">
                         </div>
                         <div class="box-footer">
                             <div class="row">
                                 <center>
-                                    <span class="badge bg-green-active" style="margin:20px;font-size:148px;">301</span>
+                                    <span class="badge bg-red" style="margin:20px;font-size:148px;">301</span>
                                 </center>
                             </div>
                             <!-- /.row -->
                         </div>
                     </div>
-                    <video controls autoplay style="display:block; margin: 0 auto;" width="350px;">
-                        <source src="static/src/vid/movie.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
                 </div>
             </div>
         </section>
@@ -496,10 +336,11 @@
 <script src="static/src/js/demo.js"></script>
 
 <script>
+
   $(document).ready(function () {
     $('.sidebar-menu').tree();
     //Loading Counter
-    setInterval(loadCounter, 1000);
+    //setInterval(loadCounter, 1000);
     //Loading Queuing
     //setInterval(loadQueue, 1000);
 
@@ -510,20 +351,10 @@
         .done(function(data){
             $('#counter-grid').empty();
             $.each( data.data, function( i, item ) {
-                var html =  '<div id="btn" class="col-md-12 col-xs-12" code="0001">' +
-                            '   <div class="info-box ' + item.counter_bg + '">' +
-                            '       <span class="info-box-icon"><i class="fa ' + item.counter_fa + '"></i></span>' +
-                            '       <div class="info-box-content">' +
-                            '           <span class="info-box-text">' + item.counter_name + '</span>' +
-                            '           <span class="info-box-number">3 More</span>' +
-                            '           <div class="progress">' +
-                            '               <div class="progress-bar" style="width: 70%">' +
-                            '           </div>' +
-                            '       </div>' +
-                            '       <span class="progress-description">' +
-                            '           70% Increase in 30 Days' +
-                            '       </span>' +
-                            '   </div>' +
+                 var html = '<div class="col-md-12 col-xs-12">' +
+                            '   <button id="btn" type="button" code="' + item.counter_code + '" class="btn3d btn btn-danger btn-lg btn-block" style="font-size:58px;">' +
+                            '       <span class="info-box-icon"><i id="btn" class="fa ' + item.counter_fa + '"></i></span> ' +  item.counter_name +
+                            '   </button>' +
                             '</div>'
                 $('#counter-grid').append(html);
             });
@@ -533,14 +364,16 @@
         });
     }
 
-    $('#btn').click(function (e){
+    $('button').on('click', function (e){
+       //console.log('click');
+       //alert($(this).attr('code'));
        createQueue($(this).attr('code'));
     });
 
-    function createQueue(typeid){
-         console.log( "Create Queue" );
+    function createQueue(code){
+         console.log( "Create Queue");
          $.ajax({
-            url         : "/queue/app/" + typeid + "/",
+            url         : "/queue/app/" + code + "/",
             type        : "POST",
             data        : {
             },
@@ -549,7 +382,7 @@
                 console.log(resp);
             },
             error        : function(xhr, status, error){
-                console.log(xhr);
+                alert(xhr);
             }
         });
     }
