--- a/jakc_queue_client/pickup_screen.html
+++ b/jakc_queue_client/pickup_screen.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>QueueLTE | Pickup Screen</title>
   <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
   <!-- Bootstrap 3.3.7 -->
-  <link rel="stylesheet" href="static/src/css/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/src/css/bootstrap/dist/css/bootstrap.min.css"/>
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="static/src/css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="static/src/css/font-awesome/css/font-awesome.min.css"/>
   <!-- Ionicons -->
-  <link rel="stylesheet" href="static/src/css/Ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="static/src/css/Ionicons/css/ionicons.min.css"/>
   <!-- Theme style -->
-  <link rel="stylesheet" href="static/src/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="static/src/css/AdminLTE.min.css"/>
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-  <link rel="stylesheet" href="static/src/css/skins/_all-skins.min.css">
-    <link rel="stylesheet" href="static/src/css/queue.css">
+    <link rel="stylesheet" href="static/src/css/skins/_all-skins.min.css"/>
+    <link rel="stylesheet" href="static/src/css/queue.css"/>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,7 +27,8 @@
   <![endif]-->
 
   <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"/>
 </head>
 <body class="hold-transition skin-blue sidebar-collapse sidebar-mini">
 <!-- Site wrapper -->
@@ -42,7 +43,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="static/src/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+            <img src="static/src/img/user2-160x160.jpg" class="img-circle" alt="User Image"/>
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p>
@@ -52,7 +53,7 @@
       <!-- search form -->
       <form action="#" method="get" class="sidebar-form">
         <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
+            <input type="text" name="q" class="form-control" placeholder="Search..."/>
           <span class="input-group-btn">
                 <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
                 </button>
@@ -84,7 +85,7 @@
                             <h5 class="widget-user-desc">Founder &amp; CEO</h5>
                         </div>
                         <div class="widget-user-image">
-                            <img class="img-circle" src="static/src/img/no-image.jpg" alt="User Avatar">
+                            <img class="img-circle" src="static/src/img/no-image.jpg" alt="User Avatar"/>
                         </div>
                         <div class="box-footer">
                             <center>
