--- a/jakc_queue_client/kiosk_screen.html
+++ b/jakc_queue_client/kiosk_screen.html
@@ -94,17 +94,17 @@
                 <div class="col-md-6 col-xs-12">
                     <div class="box box-widget widget-user">
                         <!-- Add the bg color to the header using any of the bg-* classes -->
-                        <div class="widget-user-header bg-red">
-                            <h3 class="widget-user-username">Teller</h3>
-                            <h5 class="widget-user-desc">Founder &amp; CEO</h5>
+                        <div class="widget-user-header">
+                            <h3 class="widget-user-username" id="counter_name">Not Available</h3>
+                            <h5 class="widget-user-desc" id="trans_date">00-00-0000</h5>
                         </div>
                         <div class="widget-user-image">
-                            <img class="img-circle" src="static/src/img/telkom-logo.jpg">
+                            <span class="info-box-icon"><i class="fa fa-times-circle"></i></span>
                         </div>
                         <div class="box-footer">
                             <div class="row">
                                 <center>
-                                    <span class="badge bg-red" style="margin:20px;font-size:148px;">301</span>
+                                    <span class="badge bg-red" style="margin:20px;font-size:148px;" id="counter_trans">000</span>
                                 </center>
                             </div>
                             <!-- /.row -->
